Bug 346920 - file system browser plugin crashes when typing in hidden folder path
Summary: file system browser plugin crashes when typing in hidden folder path
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: frameworks
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 342807 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-29 22:01 UTC by stevemcqueen
Modified: 2015-06-06 21:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stevemcqueen 2015-04-29 22:01:41 UTC
Using the filesystem browser plugin, when I attempt to manually type in a hidden folder path for my home directory with ~ autocompletion, Kate crashes immediately upon typing the '.' (period) character.

examples of what crashes and what doesn't:
/home/user/Documents -> works
/home/user/.kde -> works
~/Documents ->works
/.test/ -> works
~/.kde -> crashes
~/.test -> crashes


Reproducible: Always

Steps to Reproduce:
1. open kate, with file system browser plugin loaded
2. click on the filesystem browser's path, clear it
3. begin typing a hidden folder in the home directory with tilde (~/.kde/)

Actual Results:  
Kate completely crashes once you type the period '.' character.

I ran Kate off the command line and got this output when trying to reproduce:

doesn't know ""
kf5.kio.core: KLocalSocket(0x1bd4580) Jumbo packet of 71878 bytes
kate: ../../../src/widgets/kurlcompletion.cpp:280: virtual void UserListThread::run(): Assertion `m_prepend.isEmpty()' failed.
Aborted (core dumped)


Expected Results:  
Application should continue working and allow me to type and enter the ~/.kde folder.

I'm running Kubuntu 15.04, KDE Frameworks 5.9, Kate 5.0.0

Crash didn't offer any other useful information besides the message above.
Comment 1 Milian Wolff 2015-06-06 20:43:30 UTC
I can also reproduce this 100% of the time. Just need to press "CTRL + O" in kate, and then type in e.g. "~/." and it will crash with the assert above:

Application: Kate (kate), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f12bcceb800 (LWP 13377))]

Thread 12 (Thread 0x7f12a6386700 (LWP 13378)):
#0  0x00007f12b543de8d in poll () from /usr/lib/libc.so.6
#1  0x00007f12b1c779f2 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f12b1c7956f in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f12a746b089 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#4  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 11 (Thread 0x7f129a1bf700 (LWP 13379)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x1066a40) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x1066a40, threadWasBusy=true, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x1066a40, wasBusy=true) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x1066a40, wasBusy=true) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x1066a40) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f12999be700 (LWP 13380)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f12940013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f12940013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f12940013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f12940013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f12940013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f1298f76700 (LWP 13381)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f128c0013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f128c0013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f128c0013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f128c0013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f128c0013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f128bfff700 (LWP 13382)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f12900013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f12900013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f12900013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f12900013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f12900013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f128b7fe700 (LWP 13383)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f12840013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f12840013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f12840013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f12840013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f12840013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f128affd700 (LWP 13384)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f127c0013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f127c0013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f127c0013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f127c0013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f127c0013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f128a7fc700 (LWP 13385)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f12800013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f12800013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f12800013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f12800013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f12800013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f1289ffb700 (LWP 13386)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b603e31b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f129a4b301f in ThreadWeaver::Weaver::blockThreadUntilJobsAreBeingAssigned_locked (this=0x1094410, th=0x7f12740013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:594
#3  0x00007f129a4b2e8e in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait (this=0x1094410, th=0x7f12740013e0, threadWasBusy=false, suspendIfInactive=false, justReturning=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:554
#4  0x00007f129a4bd184 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1094880, th=0x7f12740013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:66
#5  0x00007f129a4bd3f5 in non-virtual thunk to ThreadWeaver::WorkingHardState::applyForWork(ThreadWeaver::Thread*, bool) () at /home/milian/projects/kf5/src/frameworks/threadweaver/src/workinghardstate.cpp:61
#6  0x00007f129a4b3192 in ThreadWeaver::Weaver::applyForWork (this=0x1094410, th=0x7f12740013e0, wasBusy=false) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/weaver.cpp:568
#7  0x00007f129a4b8665 in ThreadWeaver::Thread::run (this=0x7f12740013e0) at /home/milian/projects/kf5/src/frameworks/threadweaver/src/thread.cpp:103
#8  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f12897fa700 (LWP 13387)):
#0  0x00007f12b543fb03 in select () from /usr/lib/libc.so.6
#1  0x00007f12b61b07e0 in ?? () from /usr/lib/libQt5Core.so.5
#2  0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f1272d97700 (LWP 13514)):
[KCrash Handler]
#6  0x00007f12b5392528 in raise () from /usr/lib/libc.so.6
#7  0x00007f12b539393a in abort () from /usr/lib/libc.so.6
#8  0x00007f12b538b3a7 in __assert_fail_base () from /usr/lib/libc.so.6
#9  0x00007f12b538b452 in __assert_fail () from /usr/lib/libc.so.6
#10 0x00007f12bba3ca29 in UserListThread::run (this=0x1f4a090) at /home/milian/projects/kf5/src/frameworks/kio/src/widgets/kurlcompletion.cpp:281
#11 0x00007f12b603d08e in ?? () from /usr/lib/libQt5Core.so.5
#12 0x00007f12b3370354 in start_thread () from /usr/lib/libpthread.so.0
#13 0x00007f12b5446bfd in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f12bcceb800 (LWP 13377)):
#0  0x00007f12b337596f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f12b1c77c49 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f12b1c792ff in ?? () from /usr/lib/libxcb.so.1
#3  0x00007f12b1c79411 in xcb_wait_for_reply () from /usr/lib/libxcb.so.1
#4  0x00007f12a7469bca in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#5  0x00007f12a748366e in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#6  0x00007f12a748372b in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#7  0x00007f12b78a4385 in ?? () from /usr/lib/libQt5Widgets.so.5
#8  0x00007f12b78a47bc in ?? () from /usr/lib/libQt5Widgets.so.5
#9  0x00007f12b78c337f in QWidgetPrivate::syncBackingStore() () from /usr/lib/libQt5Widgets.so.5
#10 0x00007f12b78d9998 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#11 0x00007f12b789762c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#12 0x00007f12b789cd10 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#13 0x00007f12b621c57b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#14 0x00007f12b621e6b7 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQt5Core.so.5
#15 0x00007f12b62738f3 in ?? () from /usr/lib/libQt5Core.so.5
#16 0x00007f12b11449fd in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#17 0x00007f12b1144ce0 in ?? () from /usr/lib/libglib-2.0.so.0
#18 0x00007f12b1144d8c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#19 0x00007f12b6273cff in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#20 0x00007f12b6219ffa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#21 0x00007f12b7a8b82d in QDialog::exec() () from /usr/lib/libQt5Widgets.so.5
#22 0x00007f12a57690af in ?? () from /usr/lib/qt/plugins/platformthemes/KDEPlatformTheme.so
#23 0x00007f12b7a8b6ea in QDialog::exec() () from /usr/lib/libQt5Widgets.so.5
#24 0x00007f12b7a9d248 in QFileDialog::getOpenFileUrls(QWidget*, QString const&, QUrl const&, QString const&, QString*, QFlags<QFileDialog::Option>, QStringList const&) () from /usr/lib/libQt5Widgets.so.5
#25 0x00007f12bc8ec5ec in KateViewManager::slotDocumentOpen (this=0x10ce5a0) at /home/milian/projects/kf5/src/kde/applications/kate/kate/src/kateviewmanager.cpp:234
#26 0x00007f12bc933d60 in KateViewManager::qt_static_metacall (_o=0x10ce5a0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7ffc777322b0) at kate/src/moc_kateviewmanager.cpp:237
#27 0x00007f12b624cc1a in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#28 0x00007f12b788dd42 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#29 0x00007f12b78901e8 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#30 0x00007f12b78907ff in QAction::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#31 0x00007f12b789762c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#32 0x00007f12b789cd10 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#33 0x00007f12b621c57b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#34 0x00007f12b711da98 in QShortcutMap::dispatchEvent(QKeyEvent*) () from /usr/lib/libQt5Gui.so.5
#35 0x00007f12b711dbd1 in QShortcutMap::tryShortcutEvent(QObject*, QKeyEvent*) () from /usr/lib/libQt5Gui.so.5
#36 0x00007f12b789cc08 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#37 0x00007f12b621c57b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#38 0x00007f12b70f18f7 in QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) () from /usr/lib/libQt5Gui.so.5
#39 0x00007f12b70f6895 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/libQt5Gui.so.5
#40 0x00007f12b70dd1e8 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#41 0x00007f12a7497500 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#42 0x00007f12b11449fd in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#43 0x00007f12b1144ce0 in ?? () from /usr/lib/libglib-2.0.so.0
#44 0x00007f12b1144d8c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#45 0x00007f12b6273cff in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#46 0x00007f12b6219ffa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#47 0x00007f12b6221a4c in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#48 0x00007f12bc92a9a4 in kdemain (argc=1, argv=0x7ffc77733ec8) at /home/milian/projects/kf5/src/kde/applications/kate/kate/src/main.cpp:439
#49 0x0000000000400b52 in main (argc=1, argv=0x7ffc77733ec8) at kate/src/kate_dummy.cpp:3
Comment 2 Milian Wolff 2015-06-06 20:46:50 UTC
Also happens when inserting the above path into ./tests/kurlrequestertest_gui
Comment 3 Milian Wolff 2015-06-06 20:58:40 UTC
review request to fix this issue added: https://git.reviewboard.kde.org/r/124032/
Comment 4 Kai Uwe Broulik 2015-06-06 21:00:38 UTC
*** Bug 342807 has been marked as a duplicate of this bug. ***
Comment 5 Milian Wolff 2015-06-06 21:33:24 UTC
Git commit 36b558dbc9d739d5367366290d034cb05e1e8061 by Milian Wolff.
Committed on 06/06/2015 at 20:57.
Pushed by mwolff into branch 'master'.

Do not try to complete users and assert when prepend is non-empty.
REVIEW: 124032

M  +11   -0    autotests/kurlcompletiontest.cpp
M  +2    -1    src/widgets/kurlcompletion.cpp

http://commits.kde.org/kio/36b558dbc9d739d5367366290d034cb05e1e8061