Do not try to complete users and assert when prepend is non-empty.

BUG: 346920
REVIEW: 124032